--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" language="javascript" src="/aowp/Data/UnitsNew.json"></script>
     <script type="text/javascript" language="javascript" src="/aowp/Data/BuilderNew.js"></script>
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Domine&display=swap" rel="stylesheet">
 
 
     <title>Tutorial List</title>
@@ -25,30 +26,75 @@
 <body>
 
 
-    <div class="holder"> <img class="preview" src="Images/BannerUnity1.png"> </img>
-        <button type="button" class="collapsible">Summary & Files Link &#11167;</button>
-        <div class="content">
-            <p>($10 Tier) Files</p>
+    <div class="mainbody">
+        <p style="color:white">A list of all tutorials made</p>
+        <p style="color:white">Hyperlink Shaders</p>
+        <div class="headertext" style="font-size: 20px">
+            Unity Shaders
         </div>
 
-        <p>Collapsible Set:</p>
-        <button type="button" class="collapsible">Open Section 1</button>
-        <div class="content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
-        <button type="button" class="collapsible">Open Section 2</button>
-        <div class="content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
-        <button type="button" class="collapsible">Open Section 3</button>
-        <div class="content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <a href="https://www.patreon.com/posts/quick-game-art-7709208" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/unity1.jpg)">
+                <div class="number"> Unity #1</div>
+                <div class="centered">Lit Toon Shader</div>
+                <div class="description">Effect of Gradient Ramps on Shader</div>
+            </div>
+            <a href="https://www.patreon.com/posts/7709604" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+
+        <div class="headertext" style="font-size: 20px">
+            Textures & Colors
         </div>
 
-        <!-- <iframe id="testing" width=0px height=0px src="../../../unitcard.html">
-        <p>Your browser does not support iframes.</p>
-    </iframe>-->
+        <a href="https://www.patreon.com/posts/7715616" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/unity2.jpg)">
+                <div class="number"> Textures #1</div>
+                <div class="centered">"Lazy" Unwrapping</div>
+                <div class="description">Projecting UV's onto gradient textures</div>
+            </div>
+            <a href="https://www.patreon.com/posts/7718237" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+
+        <a href="https://www.patreon.com/posts/non-gif-version-8043700" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/unity2.jpg)">
+                <div class="number"> Textures #2</div>
+                <div class="centered">"Lazy" Unwrapping Extra</div>
+                <div class="description">More in-depth step-by-step of lazy unwrapping</div>
+            </div>
+
+            <div class="patreon-link">
+
+            </div>
+
+        </a>
+
+        <a href="https://www.patreon.com/posts/7715616" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/unity2.jpg)">
+                <div class="number"> Textures #1</div>
+                <div class="centered">"Lazy" Unwrapping</div>
+                <div class="description">Projecting UV's onto gradient textures</div>
+            </div>
+            <a href="https://www.patreon.com/posts/7718237" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+
     </div>
+
+
+
+
+
 
     <script>
         var coll = document.getElementsByClassName("collapsible");
@@ -65,6 +111,9 @@
                 }
             });
         }
+
     </script>
 
-</body></html>
+</body>
+
+</html>
