--- a/index.html
+++ b/index.html
@@ -16,8 +16,33 @@
 
 <main>
     <div class="header-img">
+        <p style="text-align: right; left:-200%">
+            <Unity></Unity>
+            <MayaLT></MayaLT>
+            <Blender></Blender>
+            <Photoshop></Photoshop>
+        </p>
+
         <div class="hero-text">
             <h1>Minions Art Tutorials</h1>
+            <p></p>
+            <a href="https://twitter.com/minionsart">
+                <Twitter></Twitter>
+            </a>
+            <a href="https://www.patreon.com/minionsart">
+
+
+                <PatreonBig></PatreonBig>
+
+            </a>
+            <a href="https://www.twitch.tv/minionsart">
+
+                <Twitch></Twitch>
+            </a>
+            <a href="https://ko-fi.com/minionsart">
+
+                <Kofi></Kofi>
+            </a>
 
         </div>
     </div>
@@ -27,16 +52,53 @@
 
 
     <div class="mainbody">
-        <p style="color:white">A list of all tutorials made</p>
-        <p style="color:white">Hyperlink Shaders</p>
-        <div class="headertext" style="font-size: 20px">
-            Unity Shaders
-        </div>
+        <p style="color:white">A list of all tutorials made for the Minionsart Patreon</p>
+        <p style="color:white">Jump to:</p>
+        <a href="#videos">
+            <div class="LinkButton">-1- Videos</div>
+        </a>
+        <a href="#articles">
+            <div class="LinkButton">-1- Articles </div>
+        </a>
+        <a href="#shaders">
+            <div class="LinkButton">-1- Unity Shaders </div>
+        </a>
+        <a href="#textures">
+            <div class="LinkButton">-1- Textures & Colors </div>
+        </a>
+        <a href="#3d">
+            <div class="LinkButton">-1- 3D Modelling </div>
+        </a>
 
+
+        <div style="clear: both"></div>
+        <div class="headertext" style="font-size: 20px">
+            <a name="videos"></a> Videos
+        </div>
+        <p></p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLV96MV08FFhfKZ8uJmJSj4luyfUH0IPcJ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <a href="https://www.patreon.com/posts/7709604" target="_blank">
+            <div class="patreon-link">
+                Character Process Videos (Concept Art, Modelling, Texturing)
+            </div>
+        </a>
+        <p></p>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLV96MV08FFhfKZ8uJmJSj4luyfUH0IPcJ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <a href="https://www.patreon.com/posts/7709604" target="_blank">
+            <div class="patreon-link">
+
+            </div>
+        </a>
+        <div class="headertext" style="font-size: 20px">
+            <a name="articles"></a> Articles
+        </div>
+        <p></p>
         <a href="https://www.patreon.com/posts/quick-game-art-7709208" target="_blank">
             <div class="preview-image-holder" style="background: url(Images/unity1.jpg)">
                 <div class="number"> Unity #1</div>
                 <div class="centered">Lit Toon Shader</div>
+                <div class="date">01/2017</div>
                 <div class="description">Effect of Gradient Ramps on Shader</div>
             </div>
             <a href="https://www.patreon.com/posts/7709604" target="_blank">
@@ -45,15 +107,35 @@
                 </div>
             </a>
         </a>
-
+        <p></p>
         <div class="headertext" style="font-size: 20px">
-            Textures & Colors
+            <a name="shaders"></a> Unity Shaders
         </div>
+        <p></p>
 
+        <a href="https://www.patreon.com/posts/quick-game-art-7709208" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/unity1.jpg)">
+                <div class="number"> Unity #1</div>
+                <div class="centered">Lit Toon Shader</div>
+                <div class="date">01/2017</div>
+                <div class="description">Effect of Gradient Ramps on Shader</div>
+            </div>
+            <a href="https://www.patreon.com/posts/7709604" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+        <div class="headertext" style="font-size: 20px">
+            <a name="textures"></a> Textures & Colors
+        </div>
+        <p></p>
         <a href="https://www.patreon.com/posts/7715616" target="_blank">
             <div class="preview-image-holder" style="background: url(Images/unity2.jpg)">
                 <div class="number"> Textures #1</div>
                 <div class="centered">"Lazy" Unwrapping</div>
+                <div class="date">01/2017</div>
                 <div class="description">Projecting UV's onto gradient textures</div>
             </div>
             <a href="https://www.patreon.com/posts/7718237" target="_blank">
@@ -62,11 +144,12 @@
                 </div>
             </a>
         </a>
-
+        <p></p>
         <a href="https://www.patreon.com/posts/non-gif-version-8043700" target="_blank">
             <div class="preview-image-holder" style="background: url(Images/unity2.jpg)">
                 <div class="number"> Textures #2</div>
                 <div class="centered">"Lazy" Unwrapping Extra</div>
+                <div class="date">01/2017</div>
                 <div class="description">More in-depth step-by-step of lazy unwrapping</div>
             </div>
 
@@ -75,7 +158,7 @@
             </div>
 
         </a>
-
+        <p></p>
         <a href="https://www.patreon.com/posts/7715616" target="_blank">
             <div class="preview-image-holder" style="background: url(Images/unity2.jpg)">
                 <div class="number"> Textures #1</div>
@@ -89,8 +172,14 @@
             </a>
         </a>
 
+        <div class="headertext" style="font-size: 20px">
+            <a name="3d"></a> 3D Modelling
+        </div>
+
+
     </div>
 
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
 
 
@@ -112,8 +201,27 @@
             });
         }
 
+        //Get the button:
+        mybutton = document.getElementById("myBtn");
+
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function() {
+            scrollFunction()
+        };
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
+            }
+        }
+
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0; // For Safari
+            document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+        }
     </script>
 
-</body>
-
-</html>
+</body></html>
