--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <p></p>
 
         <a href="https://www.patreon.com/posts/quick-game-art-7709208" target="_blank">
-            <div class="preview-image-holder" style="background: url(Images/unity1.jpg)">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity1.jpg)">
                 <div class="number"> Unity #1</div>
                 <div class="centered">Lit Toon Shader</div>
                 <div class="date">01/2017</div>
@@ -127,12 +127,59 @@
             </a>
         </a>
         <p></p>
+
+        <a href="https://www.patreon.com/posts/8172058" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity2.jpg)">
+                <div class="number"> Unity #2</div>
+                <div class="centered">Heat Distortion Effect</div>
+                <div class="date">02/2017</div>
+                <div class="description">Using the Standard Glass Refraction Shader</div>
+            </div>
+            <a href="https://www.patreon.com/posts/8182189" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/8345206" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity3.jpg)">
+                <div class="number"> Unity #3</div>
+                <div class="centered">Toon Fire Particles</div>
+                <div class="date">03/2017</div>
+                <div class="description">Fire particle system with a masking shader</div>
+            </div>
+            <a href="https://www.patreon.com/posts/8353751" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/8505325" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity4.jpg)">
+                <div class="number"> Unity #4</div>
+                <div class="centered">Portal Effect</div>
+                <div class="date">03/2017</div>
+                <div class="description">Using ZTest greater and the render queue</div>
+            </div>
+            <a href="https://www.patreon.com/posts/8514560" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
         <div class="headertext" style="font-size: 20px">
             <a name="textures"></a> Textures & Colors
         </div>
         <p></p>
         <a href="https://www.patreon.com/posts/7715616" target="_blank">
-            <div class="preview-image-holder" style="background: url(Images/unity2.jpg)">
+            <div class="preview-image-holder" style="background: url(Images/Previews/tex1.jpg)">
                 <div class="number"> Textures #1</div>
                 <div class="centered">"Lazy" Unwrapping</div>
                 <div class="date">01/2017</div>
@@ -145,11 +192,12 @@
             </a>
         </a>
         <p></p>
-        <a href="https://www.patreon.com/posts/non-gif-version-8043700" target="_blank">
-            <div class="preview-image-holder" style="background: url(Images/unity2.jpg)">
+
+        <a href="https://www.patreon.com/posts/8043700" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/tex2.jpg)">
                 <div class="number"> Textures #2</div>
                 <div class="centered">"Lazy" Unwrapping Extra</div>
-                <div class="date">01/2017</div>
+                <div class="date">02/2017</div>
                 <div class="description">More in-depth step-by-step of lazy unwrapping</div>
             </div>
 
@@ -159,23 +207,120 @@
 
         </a>
         <p></p>
-        <a href="https://www.patreon.com/posts/7715616" target="_blank">
-            <div class="preview-image-holder" style="background: url(Images/unity2.jpg)">
-                <div class="number"> Textures #1</div>
-                <div class="centered">"Lazy" Unwrapping</div>
-                <div class="description">Projecting UV's onto gradient textures</div>
+
+        <a href="https://www.patreon.com/posts/8097226" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/tex3.jpg)">
+                <div class="number"> Textures #3</div>
+                <div class="centered">Palettes</div>
+                <div class="date">02/2017</div>
+                <div class="description">Creating a palette using warm/cold colour balance</div>
             </div>
-            <a href="https://www.patreon.com/posts/7718237" target="_blank">
+            <a href="https://www.patreon.com/posts/8104936" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/8253235" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/tex4.jpg)">
+                <div class="number"> Textures #4</div>
+                <div class="centered">Palettes 2</div>
+                <div class="date">02/2017</div>
+                <div class="description">Creating a palette using the colour wheel</div>
+            </div>
+            <a href="https://www.patreon.com/posts/8263299" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+
+        <div class="headertext" style="font-size: 20px">
+            <a name="3d"></a> 3D Modelling
+        </div>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/7790432" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/3d1.jpg)">
+                <div class="number"> 3D #1</div>
+                <div class="centered">Stylized House</div>
+                <div class="date">01/2017</div>
+                <div class="description">Adding style to a basic house model</div>
+            </div>
+            <a href="https://www.patreon.com/posts/7790877" target="_blank">
                 <div class="patreon-link">
                     <Patreon></Patreon> Source Files ($10 Tier)
                 </div>
             </a>
         </a>
 
-        <div class="headertext" style="font-size: 20px">
-            <a name="3d"></a> 3D Modelling
-        </div>
+        <p></p>
 
+
+        <a href="https://www.patreon.com/posts/7790432" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/3d2.jpg)">
+                <div class="number"> 3D #2</div>
+                <div class="centered">Prototyping with Primitives</div>
+                <div class="date">01/2017</div>
+                <div class="description">Using Primitive shapes to build objects</div>
+            </div>
+            <a href="https://www.patreon.com/posts/7867876" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/7935265" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/3d3.jpg)">
+                <div class="number"> 3D #3</div>
+                <div class="centered">Character Build-up</div>
+                <div class="date">01/2017</div>
+                <div class="description">Thought Process behind making a character</div>
+            </div>
+            <a href="https://www.patreon.com/posts/7946046" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+        <a href="https://www.patreon.com/posts/8019316" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/3d4.jpg)">
+                <div class="number"> 3D #4</div>
+                <div class="centered">Tree Build-up</div>
+                <div class="date">02/2017</div>
+                <div class="description">Setup overview for different tree types</div>
+            </div>
+            <a href="https://www.patreon.com/posts/8026439" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/8426840" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/3d5.jpg)">
+                <div class="number"> 3D #5</div>
+                <div class="centered">Stylized Ruins</div>
+                <div class="date">03/2017</div>
+                <div class="description">Adding a worn down look to a base castle model</div>
+            </div>
+            <a href="https://www.patreon.com/posts/8434836" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
 
     </div>
 
@@ -222,9 +367,6 @@
             document.body.scrollTop = 0; // For Safari
             document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
         }
-
     </script>
 
-</body>
-
-</html>
+</body></html>
