--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/Tutorials/style.css">
+    <link rel="stylesheet" type="text/css" href="/tutorials/style.css">
     <meta charset="UTF-8">
     <script type="text/javascript" language="javascript" src="/aowp/Data/UnitAbilitiesNew.json"></script>
     <script type="text/javascript" language="javascript" src="/aowp/Data/UnitsNew.json"></script>
