--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
                 <div class="date">01/2017</div>
                 <div class="description">Effect of Gradient Ramps on Shader</div>
             </div>
+            <div class="normal-link">
+                Read Post
+            </div>
             <a href="https://www.patreon.com/posts/7709604" target="_blank">
                 <div class="patreon-link">
                     <Patreon></Patreon> Source Files ($10 Tier)
@@ -134,6 +137,9 @@
                 <div class="centered">Heat Distortion Effect</div>
                 <div class="date">02/2017</div>
                 <div class="description">Using the Standard Glass Refraction Shader</div>
+            </div>
+            <div class="normal-link">
+                Read Post
             </div>
             <a href="https://www.patreon.com/posts/8182189" target="_blank">
                 <div class="patreon-link">
@@ -150,6 +156,9 @@
                 <div class="date">03/2017</div>
                 <div class="description">Fire particle system with a masking shader</div>
             </div>
+            <div class="normal-link">
+                Read Post
+            </div>
             <a href="https://www.patreon.com/posts/8353751" target="_blank">
                 <div class="patreon-link">
                     <Patreon></Patreon> Source Files ($10 Tier)
@@ -165,6 +174,9 @@
                 <div class="centered">Portal Effect</div>
                 <div class="date">03/2017</div>
                 <div class="description">Using ZTest greater and the render queue</div>
+            </div>
+            <div class="normal-link">
+                Read Post
             </div>
             <a href="https://www.patreon.com/posts/8514560" target="_blank">
                 <div class="patreon-link">
@@ -185,6 +197,9 @@
                 <div class="date">01/2017</div>
                 <div class="description">Projecting UV's onto gradient textures</div>
             </div>
+            <div class="normal-link">
+                Read Post
+            </div>
             <a href="https://www.patreon.com/posts/7718237" target="_blank">
                 <div class="patreon-link">
                     <Patreon></Patreon> Source Files ($10 Tier)
@@ -200,7 +215,9 @@
                 <div class="date">02/2017</div>
                 <div class="description">More in-depth step-by-step of lazy unwrapping</div>
             </div>
-
+            <div class="normal-link">
+                Read Post
+            </div>
             <div class="patreon-link">
 
             </div>
@@ -214,6 +231,9 @@
                 <div class="centered">Palettes</div>
                 <div class="date">02/2017</div>
                 <div class="description">Creating a palette using warm/cold colour balance</div>
+            </div>
+            <div class="normal-link">
+                Read Post
             </div>
             <a href="https://www.patreon.com/posts/8104936" target="_blank">
                 <div class="patreon-link">
@@ -229,6 +249,9 @@
                 <div class="centered">Palettes 2</div>
                 <div class="date">02/2017</div>
                 <div class="description">Creating a palette using the colour wheel</div>
+            </div>
+            <div class="normal-link">
+                Read Post
             </div>
             <a href="https://www.patreon.com/posts/8263299" target="_blank">
                 <div class="patreon-link">
@@ -251,6 +274,9 @@
                 <div class="date">01/2017</div>
                 <div class="description">Adding style to a basic house model</div>
             </div>
+            <div class="normal-link">
+                Read Post
+            </div>
             <a href="https://www.patreon.com/posts/7790877" target="_blank">
                 <div class="patreon-link">
                     <Patreon></Patreon> Source Files ($10 Tier)
@@ -268,6 +294,9 @@
                 <div class="date">01/2017</div>
                 <div class="description">Using Primitive shapes to build objects</div>
             </div>
+            <div class="normal-link">
+                Read Post
+            </div>
             <a href="https://www.patreon.com/posts/7867876" target="_blank">
                 <div class="patreon-link">
                     <Patreon></Patreon> Source Files ($10 Tier)
@@ -284,6 +313,9 @@
                 <div class="date">01/2017</div>
                 <div class="description">Thought Process behind making a character</div>
             </div>
+            <div class="normal-link">
+                Read Post
+            </div>
             <a href="https://www.patreon.com/posts/7946046" target="_blank">
                 <div class="patreon-link">
                     <Patreon></Patreon> Source Files ($10 Tier)
@@ -297,6 +329,9 @@
                 <div class="centered">Tree Build-up</div>
                 <div class="date">02/2017</div>
                 <div class="description">Setup overview for different tree types</div>
+            </div>
+            <div class="normal-link">
+                Read Post
             </div>
             <a href="https://www.patreon.com/posts/8026439" target="_blank">
                 <div class="patreon-link">
@@ -313,6 +348,9 @@
                 <div class="centered">Stylized Ruins</div>
                 <div class="date">03/2017</div>
                 <div class="description">Adding a worn down look to a base castle model</div>
+            </div>
+            <div class="normal-link">
+                Read Post
             </div>
             <a href="https://www.patreon.com/posts/8434836" target="_blank">
                 <div class="patreon-link">
